Kafka Telemetry final cleanup